[package]
name = "learn_bevy"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

#exclude = ["crates/ticka"]
include = [   
        "crates/ticka",
        "crates/bevy-ticka"
    ]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
#bevy_internal = "0.8.1"
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_flycam = "0.9.0"
bevy-inspector-egui = "0.17.0"
tiled = "0.10.2"
anyhow = "1.0"
hex2d = "1.1.0"
ticka = { path = "crates/ticka" }
bevy_ticka = { path = "crates/bevy_ticka" }
sn_rust = { path = "crates/sn_rust" }

# derive-getters = "0.2.0"