[package]
name = "bevy_ticka"
version = "0.1.0"
authors = ["Thomas Haller <thomashaller@gmx.at>"]
edition = "2021"


[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 1

[dependencies]
ticka = { path = "../ticka" }
bevy = { version = "0.9.1", features = ["dynamic"] }
sn_rust = { path = "../sn_rust" }
hex2d = "1.1.0"
derive-getters = "0.2.0"