[package]
name = "ticka"
description = "ticka is a multihrreaded tick based processor for games with simultanous action commitment and conflict resolving strategies with a goal of scalability."
version = "0.1.0"
authors = ["Thomas Haller <thomashaller@gmx.at>"]
edition = "2021"


[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 1

[dependencies]
rayon = "1.6.1"
hex2d = "1.1.0"
derive-getters = "0.2.0"
sn_rust = { path="../sn_rust"}
